syntax = "proto3";
package dymensionxyz.dymension.sequencer;

import "gogoproto/gogo.proto";
import "types/dymensionxyz/dymension/sequencer/params.proto";
import "types/dymensionxyz/dymension/sequencer/sequencer.proto";

option go_package = "github.com/dymensionxyz/dymint/types/pb/dymensionxyz/dymension/sequencer";

// GenesisState defines the sequencer module's genesis state.
message GenesisState {
  Params params = 1 [ (gogoproto.nullable) = false ];
  // sequencerList is a list of all defined sequencers
  repeated Sequencer sequencerList = 2 [ (gogoproto.nullable) = false ];
  // genesisProposers is a list of the defined genesis proposers
  repeated GenesisProposer genesisProposers = 3
      [ (gogoproto.nullable) = false ];
  // bondReductions is a list of all bond reductions
  repeated BondReduction bondReductions = 4 [(gogoproto.nullable) = false];
}

message GenesisProposer {
  string address = 1;
  string rollappId = 2;
}